feature 0003643  enhanced: Add author column, ecosystem preference page and ecosystem provider
git-svn-id: http://talendforge.org/svn/tos/trunk@13700 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.ecosystem/src/main/java/messages.properties
+++ b/org.talend.designer.components.ecosystem/src/main/java/messages.properties
@@ -1,16 +1,18 @@
 EcosystemViewComposite.Status.Title=Status
 EcosystemViewComposite.ComponentName.Title=Component Name
+EcosystemViewComposite.Author.Title=Author
 EcosystemViewComposite.ReleasedDate.Title=Released Date
 EcosystemViewComposite.Description.Title=Description
 EcosystemViewComposite.Revision.Title=Revision
 EcosystemViewComposite.Status.NotInstalled=Not Installed
 EcosystemViewComposite.Status.Installed=Installed
-EcosystemViewComposite.Status.Deprecated=Deprecated
+EcosystemViewComposite.Status.Deprecated=Not Installed
 DownloadComponenentsAction.DownloadTaskName=Downloading file from url:
 DownloadComponenentsAction.SetUserFolder.Title=Cannot download the selected components 
-DownloadComponenentsAction.SetUserFolder.Message=You must set the user folder in preference page.
+DownloadComponenentsAction.SetUserFolder.Message=You must set the ecosystem folder in preference page.
 EcosystemView.FindAvailableExtensions=Finding available component extensions from ecosystem...
 EcosystemView.FilterLabelText=Find:
 EcosystemView.FilterLinkText=Filter
 FilterDialog.Title=Select fields to apply filter
+EcosystemPreferencePage.DirectoryFieldLabel=Ecosystem components folder:
 
