--- a/org.talend.designer.components.ecosystem/src/main/java/messages.properties
+++ b/org.talend.designer.components.ecosystem/src/main/java/messages.properties
@@ -10,7 +10,8 @@ EcosystemViewComposite.Status.Deprecated=Not Installed
 DownloadComponenentsAction.DownloadTaskName=Downloading file from url:
 DownloadComponenentsAction.SetUserFolder.Title=Cannot download the selected components 
 DownloadComponenentsAction.SetUserFolder.Message=You must set the ecosystem folder in preference page.
-EcosystemView.FindAvailableExtensions=Finding component extensions for version {0} from ecosystem...
+RefreshJob.FindExtensions.Title=Finding available component extensions
+RefreshJob.FindExtensions.Message=Finding component extensions for version {0} from ecosystem...
 EcosystemView.FilterLabelText=Find:
 EcosystemView.FilterLinkText=Filter
 FilterDialog.Title=Select fields to apply filter
