For TDI-19914 to tuning the UI
git-svn-id: http://talendforge.org/svn/tos/trunk@81475 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -15,6 +15,7 @@ Label_JobTrackerEndPoint=Job tracker end point
 Label_OozieEndPoint=Oozie end point
 Dialog_Schedule_Title=Oozie Scheding
 Dialog_Scheduler_Setting=Oozie Scheduler Setting
+Title_name=No job for Oozie
 MSG_output_running=Workflow job running ...
 MSG_output_status=
 MSG_output_kill=Workflow job is killed!
