--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -15,7 +15,10 @@ Label_JobTrackerEndPoint=Job tracker end point
 Label_OozieEndPoint=Oozie end point
 Dialog_Schedule_Title=Oozie Scheding
 Dialog_Scheduler_Setting=Oozie Scheduler Setting
-Title_name=No job for Oozie
+Part_name_nojob=Oozie scheduler
+Part_name_job=Oozie({0})
+Title_name_nojob=No job for Oozie
+Title_name_job=Oozie {0}
 MSG_output_running=Workflow job running ...
 MSG_output_status=
 MSG_output_kill=Workflow job is killed!
