For TDI-19914 to remote run.
git-svn-id: http://talendforge.org/svn/tos/trunk@81675 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -13,6 +13,7 @@ Label_EndTime=End Time
 Label_NameNodeEndPoint=Name node end point
 Label_JobTrackerEndPoint=Job tracker end point
 Label_OozieEndPoint=Oozie end point
+Label_userName_for_hadoop=User Name
 Dialog_Schedule_Title=Oozie Scheding
 Dialog_Scheduler_Setting=Oozie Scheduler Setting
 Part_name_nojob=Oozie scheduler
