For TDI-19914 to tuning codes for running remotely and adjust button status.
git-svn-id: http://talendforge.org/svn/tos/trunk@81984 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -5,6 +5,7 @@ Button_Kill=Kill
 Button_Setting=Setting
 Button_StartTime=...
 Button_EndTime=...
+Button_monitoring=Monitor
 Label_Path=Path
 Label_Frequency=Frequency
 Label_TimeUnit=Time Unit
@@ -20,9 +21,13 @@ Part_name_nojob=Oozie scheduler
 Part_name_job=Oozie({0})
 Title_name_nojob=No job for Oozie
 Title_name_job=Oozie {0}
-MSG_output_running=Workflow job running ...
+MSG_output_startup=Remote running is start-up...
+MSG_output_deploying=Deploying a job to Hadoop...
+MSG_output_deployment_complete=Deployment complete!
+MSG_output_deployment_failed=Deployment failed!
+MSG_output_running=Job is running ...
 MSG_output_status=
 MSG_output_kill=Workflow job is killed!
-MSG_output_complete=Workflow job completed. Job[{0}], Status: [{1}].
+MSG_output_job_complete=Job is completed.
 
 
