--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -25,9 +25,11 @@ MSG_output_startup=Remote running is start-up...
 MSG_output_deploying=Deploying a job to Hadoop...
 MSG_output_deployment_complete=Deployment complete!
 MSG_output_deployment_failed=Deployment failed!
-MSG_output_running=Job is running ...
-MSG_output_status=
-MSG_output_kill=Workflow job is killed!
+MSG_output_job_running=Job is running ...
+MSG_output_job_prepare=Prepare to run job...
+MSG_output_job_kill=Job is killed!
+MSG_output_job_fail=Job is failed!
+MSG_output_job_suspended=Job is suspended!
 MSG_output_job_complete=Job is completed.
 
 
