For feature TDI-19914, show button "Monitor" if current OS is Windows, otherwise show monitoring tab.
git-svn-id: http://talendforge.org/svn/tos/trunk@82422 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -17,6 +17,7 @@ Label_OozieEndPoint=Oozie end point
 Label_userName_for_hadoop=User Name
 Dialog_Schedule_Title=Oozie Scheding
 Dialog_Scheduler_Setting=Oozie Scheduler Setting
+OS_windows_name_prefix=Windows
 Part_name_nojob=Oozie scheduler
 Part_name_job=Oozie({0})
 Title_name_nojob=No job for Oozie
@@ -31,5 +32,7 @@ MSG_output_job_kill=Job is killed!
 MSG_output_job_fail=Job is failed!
 MSG_output_job_suspended=Job is suspended!
 MSG_output_job_complete=Job is completed.
+MSG_warning_url_title=URL Warning
+MSG_warning_invalid_url=The Oozie URL is not valid! Please reset the Oozie End Point by clicking the "Setting" button to enter or "Window" --> "Preferences" --> "Talend"--> "Oozie".
 
 
