Oozie View Fixes : * bug fix on linux : worflow.xml was not deployed because of Path class changing // to /; Using simple String as a temporary fix * Basic English fixes
git-svn-id: http://talendforge.org/svn/tos/trunk@82720 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -22,17 +22,17 @@ Part_name_nojob=Oozie scheduler
 Part_name_job=Oozie({0})
 Title_name_nojob=No job for Oozie
 Title_name_job=Oozie {0}
-MSG_output_startup=Remote running is start-up...
-MSG_output_deploying=Deploying a job to Hadoop...
+MSG_output_startup=Starting job remote running...
+MSG_output_deploying=Deploying job to Hadoop...
 MSG_output_deployment_complete=Deployment complete!
 MSG_output_deployment_failed=Deployment failed!
 MSG_output_job_running=Job is running ...
-MSG_output_job_prepare=Prepare to run job...
-MSG_output_job_kill=Job is killed!
-MSG_output_job_fail=Job is failed!
-MSG_output_job_suspended=Job is suspended!
-MSG_output_job_complete=Job is completed.
+MSG_output_job_prepare=Preparing to run job...
+MSG_output_job_kill=Job killed!
+MSG_output_job_fail=Job failed!
+MSG_output_job_suspended=Job suspended!
+MSG_output_job_complete=Job complete!
 MSG_warning_url_title=URL Warning
-MSG_warning_invalid_url=The Oozie URL is not valid! Please reset the Oozie End Point by clicking the "Setting" button to enter or "Window" --> "Preferences" --> "Talend"--> "Oozie".
+MSG_warning_invalid_url=Oozie URL is not valid! Please reset "Oozie End Point" by clicking "Setting" button or "Window" --> "Preferences" --> "Talend"--> "Oozie".
 
 
