feature TDI-22584 added : Add a rowseparator and a field separator in the HDFS wizard
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@89997 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs/src/messages.properties
+++ b/org.talend.repository.hdfs/src/messages.properties
@@ -55,7 +55,14 @@ HDFSForm.check.namenodeURI=Namenode URI must be specified
 HDFSForm.check.principal=Principal must be specified
 HDFSForm.check.userName=User name must be specified
 HDFSForm.check.group=Group must be specified
+HDFSForm.check.rowSeparator=Row Separator must be specified
+HDFSForm.check.fieldSeparator=Field Separator must be specified
 HDFSForm.check.checkConnection=You must press the Check Button to check the HDFS Setting
+HDFSForm.separatorSettings=Separator Settings
+HDFSForm.rowSeparator=Row Separator
+HDFSForm.rowSeparator.tooltip=Set the row separator
+HDFSForm.fieldSeparator=Field Separator
+HDFSForm.fieldSeparator.tooltip=Set the field separator
 
 HDFSSchemaForm.button.retrieveSchema=Retrieve Schema
 HDFSSchemaForm.button.retrieveSchema.tooltip=Press this button to get a detailed schema..
@@ -81,6 +88,7 @@ CreateHDFSSchemaAction.createLabel=Retrieve Schema
 CreateHDFSSchemaAction.editLabel=Edit Schema
 CreateHDFSSchemaAction.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
 CreateHDFSSchemaAction.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
+CreateHDFSSchemaAction.checkConnection=Checking HDFS connection...
 
 EditHDFSPropertiesAction.editLabel=Edit properties
 EditHDFSPropertiesAction.tooltip=Edit properties
