i18n: synchronize Babili strings exported on 5.2.0M4-2012-09-26-11-48-02
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@91417 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs.nl/src/messages_en.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_en.properties
@@ -1,6 +1,5 @@
 HDFSWizard.windowTitle=HDFS Connection
 HDFSWizard.persistenceException=Access to the data failure
-
 HDFSWizardPage.titleCreate.Step1=New HDFS Connection on repository - Step 1/2
 HDFSWizardPage.descriptionCreate.Step1=Define the properties
 HDFSWizardPage.titleCreate.Step2=New HDFS Connection on repository - Step 2/2
@@ -13,13 +12,10 @@ HDFSSchemaWizardPage.titleCreate=New Schema on "{0}"
 HDFSSchemaWizardPage.descriptionCreate=Add a Schema on repository
 HDFSSchemaWizardPage.titleUpdate=Update Schema "{0}"
 HDFSSchemaWizardPage.descriptionUpdate=Update an existing Schema on repository
-
 HDFSSchemaWizard.persistenceException=Access to the data failure
-
 AbstractHDFSForm.checkConnection.success.title=Check Connection
 AbstractHDFSForm.checkConnection.success.msg="{0}" connection successful.
 AbstractHDFSForm.checkConnection.failure.msg=Connection failure. You must change the HDFS Settings.
-
 HDFSFileSelectorForm.selectFiles=Select files to retrieve schemas
 HDFSFileSelectorForm.nameFilter=Name Filter:
 HDFSFileSelectorForm.nameFilter.tooltip=Enter type name prefix or pattern(*,?,or camel case).
@@ -35,9 +31,8 @@ HDFSFileSelectorForm.Pending=Pending
 HDFSFileSelectorForm.fetchChildren=Fetch children
 HDFSFileSelectorForm.title.confirm=Confirm
 HDFSFileSelectorForm.title.success=Success
-HDFSFileSelectorForm.tableIsExist=Another "{0}" already exist in "{1}", do you want to cover it?
+HDFSFileSelectorForm.tableIsExist=Another "{0}" already exist in "{1}", do you want to overwrite it?
 HDFSFileSelectorForm.msg.connectionFailure="HDFS connection failure. Please press "Check Connection" to restore the situation."
-
 HDFSForm.distributionSettings=Distribution Settings
 HDFSForm.distribution=Distribution
 HDFSForm.distribution.tooltip=Set the hadoop distribution
@@ -55,10 +50,16 @@ HDFSForm.check.namenodeURI=Namenode URI must be specified
 HDFSForm.check.principal=Principal must be specified
 HDFSForm.check.userName=User name must be specified
 HDFSForm.check.group=Group must be specified
+HDFSForm.check.rowSeparator=Row Separator must be specified
+HDFSForm.check.fieldSeparator=Field Separator must be specified
 HDFSForm.check.checkConnection=You must press the Check Button to check the HDFS Setting
-
+HDFSForm.separatorSettings=Separator Settings
+HDFSForm.rowSeparator=Row Separator
+HDFSForm.rowSeparator.tooltip=Set the row separator
+HDFSForm.fieldSeparator=Field Separator
+HDFSForm.fieldSeparator.tooltip=Set the field separator
 HDFSSchemaForm.button.retrieveSchema=Retrieve Schema
-HDFSSchemaForm.button.retrieveSchema.tooltip=Press this button to get a detailed schema..
+HDFSSchemaForm.button.retrieveSchema.tooltip=Press this button to get a detailed schema.
 HDFSSchemaForm.button.addSchema=Add Schema
 HDFSSchemaForm.button.removeSchema=Remove Schema
 HDFSSchemaForm.text.name=Name
@@ -72,16 +73,13 @@ HDFSSchemaForm.msg.changeSchema=Schema settings changed and are different from c
 HDFSSchemaForm.check.tableNameIsEmpty=A Schema have a empty name. It must be specified
 HDFSSchemaForm.check.tableNameIsExist=This name is already existing "{0}"
 HDFSSchemaForm.check.tableNameIsInvalid=Name content illegal characters:{0}
-
 CreateHDFSAction.createLabel=Create HDFS
 CreateHDFSAction.editLabel=Edit HDFS
 CreateHDFSAction.openLabel=Open HDFS
-
 CreateHDFSSchemaAction.createLabel=Retrieve Schema
 CreateHDFSSchemaAction.editLabel=Edit Schema
 CreateHDFSSchemaAction.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
 CreateHDFSSchemaAction.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
-
+CreateHDFSSchemaAction.checkConnection=Checking HDFS connection...
 EditHDFSPropertiesAction.editLabel=Edit properties
 EditHDFSPropertiesAction.tooltip=Edit properties
-
