--- a/org.talend.repository.hcatalog.nl/src/messages_en.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_en.properties
@@ -1,6 +1,5 @@
 HCatalogWizard.windowTitle=HCatalog Connection
 HCatalogWizard.persistenceException=Access to the data failure
-
 HCatalogWizardPage.titleCreate.Step1=New HCatalog Connection on repository - Step 1/2
 HCatalogWizardPage.descriptionCreate.Step1=Define the properties
 HCatalogWizardPage.titleCreate.Step2=New HCatalog Connection on repository - Step 2/2
@@ -13,13 +12,10 @@ HCatalogSchemaWizardPage.titleCreate=New Schema on "{0}"
 HCatalogSchemaWizardPage.descriptionCreate=Add a Schema on repository
 HCatalogSchemaWizardPage.titleUpdate=Update Schema "{0}"
 HCatalogSchemaWizardPage.descriptionUpdate=Update an existing Schema on repository
-
 HCatalogSchemaWizard.persistenceException=Access to the data failure
-
 AbstractHCatalogForm.checkConnection.success.title=Check Connection
 AbstractHCatalogForm.checkConnection.success.msg="{0}" connection successful.
 AbstractHCatalogForm.checkConnection.failure.msg=Connection failure. You must change the HCatalog Settings.
-
 HCatalogTableSelectorForm.selectFiles=Select tables to retrieve schemas
 HCatalogTableSelectorForm.nameFilter=Name Filter:
 HCatalogTableSelectorForm.nameFilter.tooltip=Enter type name prefix or pattern(*,?,or camel case).
@@ -35,10 +31,9 @@ HCatalogTableSelectorForm.Pending=Pending
 HCatalogTableSelectorForm.fetchChildren=Fetch children
 HCatalogTableSelectorForm.title.confirm=Confirm
 HCatalogTableSelectorForm.title.success=Success
-HCatalogTableSelectorForm.tableIsExist=Another "{0}" already exist in "{1}", do you want to cover it?
+HCatalogTableSelectorForm.tableIsExist=Another "{0}" already exist in "{1}", do you want to overwrite it?
 HCatalogTableSelectorForm.msg.connectionFailure="HCatalog connection failure. Please press "Check Connection" to restore the situation."
 HCatalogTableSelectorForm.AchieveSchema=Achieving HCatalog schema...
-
 HCatalogForm.distributionSettings=Distribution Settings
 HCatalogForm.distribution=Distribution
 HCatalogForm.distribution.tooltip=Set the hadoop distribution
@@ -65,9 +60,8 @@ HCatalogForm.check.checkConnection=You must press the Check Button to check the 
 HCatalogForm.databaseSettings=Database Settings
 HCatalogForm.text.database=Database
 HCatalogForm.button.check=Check
-
 HCatalogSchemaForm.button.retrieveSchema=Retrieve Schema
-HCatalogSchemaForm.button.retrieveSchema.tooltip=Press this button to get a detailed schema..
+HCatalogSchemaForm.button.retrieveSchema.tooltip=Press this button to get a detailed schema.
 HCatalogSchemaForm.button.addSchema=Add Schema
 HCatalogSchemaForm.button.removeSchema=Remove Schema
 HCatalogSchemaForm.text.name=Name
@@ -79,21 +73,16 @@ HCatalogSchemaForm.title.confirmChange=Confirm changes ?
 HCatalogSchemaForm.msg.deleteSchema=Are you sure to delete this schema ?
 HCatalogSchemaForm.msg.changeSchema=Schema settings changed and are different from current schema preview. Updating schema will \n overwrite all current data. Continue anyway ?
 HCatalogSchemaForm.check.tableNameIsEmpty=A Schema have a empty name. It must be specified
-HCatalogSchemaForm.check.tableNameIsExist=This name is already existing "{0}"
+HCatalogSchemaForm.check.tableNameIsExist=This name already exists "{0}"
 HCatalogSchemaForm.check.tableNameIsInvalid=Name content illegal characters:{0}
-
 CreateHCatalogAction.createLabel=Create HCatalog
 CreateHCatalogAction.editLabel=Edit HCatalog
 CreateHCatalogAction.openLabel=Open HCatalog
-
 CreateHCatalogSchemaAction.createLabel=Retrieve Schema
 CreateHCatalogSchemaAction.editLabel=Edit Schema
 CreateHCatalogSchemaAction.connectionFailure.mainMsg=Connection failure. You must change the HCatalog Settings.
 CreateHCatalogSchemaAction.connectionFailure.detailMsg=Cannot connect to HCatalog. Please check the connection parameters.
 CreateHCatalogSchemaAction.checkConnection=Checking HCatalog connection...
-
 EditHCatalogPropertiesAction.editLabel=Edit properties
 EditHCatalogPropertiesAction.tooltip=Edit properties
-
 HCatalogRepositoryContentHandler.partitions=Partitions
-
