bug TDI-23160 fixed : Need to add the file size in a column of the hdfs browser
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@91690 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs/src/messages.properties
+++ b/org.talend.repository.hdfs/src/messages.properties
@@ -25,6 +25,7 @@ HDFSFileSelectorForm.nameFilter=Name Filter:
 HDFSFileSelectorForm.nameFilter.tooltip=Enter type name prefix or pattern(*,?,or camel case).
 HDFSFileSelectorForm.schemaTree.nameColumn=Name
 HDFSFileSelectorForm.schemaTree.typeColumn=Type
+HDFSFileSelectorForm.schemaTree.sizeColumn=Size
 HDFSFileSelectorForm.schemaTree.numberColumn=Column number
 HDFSFileSelectorForm.schemaTree.statusColumn=Creation status
 HDFSFileSelectorForm.button.selectAll=Select All
