--- a/org.talend.designer.hdfsbrowse/src/messages.properties
+++ b/org.talend.designer.hdfsbrowse/src/messages.properties
@@ -2,6 +2,7 @@ HDFSBrowseDialog.title=HDFS Browse
 HDFSBrowseDialog.desc=Please select a {0}.
 HDFSBrowseDialog.column.name=Name
 HDFSBrowseDialog.column.type=Type
+HDFSBrowseDialog.column.size=Size
 HDFSBrowseDialog.button.collapseAll=Collapse All
 
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
