i18n: synchronize Babili strings exported on 5.2.0RC1-2012-10-15-15-04-12
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@92167 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog.nl/src/messages_fr.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_fr.properties
@@ -16,12 +16,15 @@ AbstractHCatalogForm.checkConnection.success.title=Vérifier la connexion
 AbstractHCatalogForm.checkConnection.success.msg=Connexion "{0}" établie.
 AbstractHCatalogForm.checkConnection.failure.msg=Echec de la connexion. Modifiez les paramètres de HCatalog.
 HCatalogTableSelectorForm.selectFiles=Sélectionner les tables pour récupérer les schémas
+HCatalogTableSelectorForm.nameFilter=Filtre sur le nom \:
+HCatalogTableSelectorForm.schemaTree.numberColumn=Nombre de colonnes
 HCatalogTableSelectorForm.schemaTree.statusColumn=Statut de création
 HCatalogTableSelectorForm.button.selectAll=Tout sélectionner
 HCatalogTableSelectorForm.button.selectNone=Sélectionner aucun(e)
 HCatalogTableSelectorForm.extractColumns=Extraction des colonnes...
 HCatalogTableSelectorForm.fetchChildren=Récupérer l'enfant
 HCatalogTableSelectorForm.title.confirm=Confirmer
+HCatalogTableSelectorForm.title.success=Succès
 HCatalogTableSelectorForm.tableIsExist=Un autre "{0}" existe déjà dans "{1}", l'écraser ?
 HCatalogTableSelectorForm.AchieveSchema=Finition du schéma HCatalog...
 HCatalogForm.distributionSettings=Paramètres de la distribution
@@ -30,6 +33,7 @@ HCatalogForm.version.tooltip=Configurer la version de la distribution
 HCatalogForm.templetonSettings=Paramètres de Templeton
 HCatalogForm.text.host=Hôte
 HCatalogForm.text.port=Port
+HCatalogForm.text.nnPrincipal=NameNode principal
 HCatalogForm.check.distribution=La distribution doit être spécifiée
 HCatalogForm.check.version=La version doit être spécifiée
 HCatalogForm.check.host=L'hôte doit être spécifié
