--- a/org.talend.repository.hdfs.nl/src/messages_fr.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_fr.properties
@@ -4,6 +4,9 @@ HDFSWizardPage.titleCreate.Step2=Nouvelle connexion HDFS dans le référentiel - E
 HDFSWizardPage.titleUpdate.Step1=Mettre à jour la connexion HDFS - Etape 1/2
 HDFSWizardPage.titleUpdate.Step2=Mettre à jour la connexion HDFS - Etape 2/2
 HDFSFileSelectorForm.selectFiles=Sélectionnez les fichiers pour récupérer les schémas
+HDFSFileSelectorForm.nameFilter=Filtre sur le nom \:
+HDFSFileSelectorForm.schemaTree.numberColumn=Nombre de colonnes
+HDFSFileSelectorForm.title.success=Succès
 HDFSFileSelectorForm.tableIsExist=Un(e) autre "{0}" existe déjà dans "{1}". L'écraser ?
 HDFSForm.connectionSettings=Paramètres de connexion
 HDFSForm.button.kerberos=Activer la sécurité Kerberos
