i18n: synchronize Babili strings exported on 5.2.0RC2-2012-10-22-09-35-20
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@92555 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs.nl/src/messages_en.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_en.properties
@@ -83,3 +83,4 @@ CreateHDFSSchemaAction.connectionFailure.detailMsg=Cannot connect to HDFS "{0}".
 CreateHDFSSchemaAction.checkConnection=Checking HDFS connection...
 EditHDFSPropertiesAction.editLabel=Edit properties
 EditHDFSPropertiesAction.tooltip=Edit properties
+HDFSFileSelectorForm.schemaTree.sizeColumn=Size
