--- a/org.talend.designer.hdfsbrowse.nl/src/messages_en.properties
+++ b/org.talend.designer.hdfsbrowse.nl/src/messages_en.properties
@@ -5,3 +5,4 @@ HDFSBrowseDialog.column.type=Type
 HDFSBrowseDialog.button.collapseAll=Collapse All
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
+HDFSBrowseDialog.column.size=Size
