--- a/org.talend.designer.hdfsbrowse/src/messages.properties
+++ b/org.talend.designer.hdfsbrowse/src/messages.properties
@@ -7,3 +7,4 @@ HDFSBrowseDialog.button.collapseAll=Collapse All
 
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
+AbstractHDFSBrowseController.checkConnection=Checking HDFS connection...
