i18n: synchronize Babili strings exported on 2012-11-28-17-35-01
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@94563 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog.nl/src/messages_fr.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_fr.properties
@@ -28,11 +28,14 @@ HCatalogTableSelectorForm.title.success=Succès
 HCatalogTableSelectorForm.tableIsExist=Un autre "{0}" existe déjà dans "{1}", l'écraser ?
 HCatalogTableSelectorForm.AchieveSchema=Finition du schéma HCatalog...
 HCatalogForm.distributionSettings=Paramètres de la distribution
+HCatalogForm.distribution=Distribution
 HCatalogForm.distribution.tooltip=Configurer la distribution Hadoop
+HCatalogForm.version=Version
 HCatalogForm.version.tooltip=Configurer la version de la distribution
 HCatalogForm.templetonSettings=Paramètres de Templeton
 HCatalogForm.text.host=Hôte
 HCatalogForm.text.port=Port
+HCatalogForm.button.kerberos=Utiliser l'authentification de Kerberos
 HCatalogForm.text.nnPrincipal=NameNode principal
 HCatalogForm.check.distribution=La distribution doit être spécifiée
 HCatalogForm.check.version=La version doit être spécifiée
@@ -42,12 +45,14 @@ HCatalogForm.check.userName=L'utilisateur doit être spécifié
 HCatalogForm.check.database=La base de données doit être spécifiée
 HCatalogForm.check.checkConnection=Cliquez sur le bouton Vérifier pour vérifier les paramètres de HCatalog
 HCatalogForm.databaseSettings=Paramètres de la base de données
+HCatalogForm.text.database=Base de données
 HCatalogForm.button.check=Vérifier
 HCatalogSchemaForm.button.retrieveSchema=Récupérer le schéma
 HCatalogSchemaForm.button.retrieveSchema.tooltip=Cliquez sur ce bouton pour obtenir un schéma détaillé.
 HCatalogSchemaForm.button.addSchema=Ajouter un schéma
 HCatalogSchemaForm.button.removeSchema=Supprimer le schéma
 HCatalogSchemaForm.group.schema.title=Schéma
+HCatalogSchemaForm.tableNavigator.tableColumn=Table
 HCatalogSchemaForm.title.confirmChange=Confirmer les modifications ?
 HCatalogSchemaForm.msg.deleteSchema=Supprimer le schéma ?
 HCatalogSchemaForm.msg.changeSchema=Les paramètres du schéma ont été modifiés et sont différents de l'aperçu. Mettre à jour le schéma \n écrasera les données courantes. Continuer ?
