--- a/org.talend.repository.hdfs.nl/src/messages_fr.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_fr.properties
@@ -8,7 +8,10 @@ HDFSFileSelectorForm.nameFilter=Filtre sur le nom \:
 HDFSFileSelectorForm.schemaTree.numberColumn=Nombre de colonnes
 HDFSFileSelectorForm.title.success=Succès
 HDFSFileSelectorForm.tableIsExist=Un(e) autre "{0}" existe déjà dans "{1}". L'écraser ?
+HDFSForm.distribution=Distribution
+HDFSForm.version=Version
 HDFSForm.connectionSettings=Paramètres de connexion
+HDFSForm.text.namenodeURI=URI du NameNode
 HDFSForm.button.kerberos=Activer la sécurité Kerberos
 HDFSForm.text.principal=Principal
 HDFSForm.check.namenodeURI=L'URI du NameNode doit être spécifiée
@@ -18,9 +21,12 @@ HDFSForm.check.rowSeparator=Le séparateur de lignes doit être spécifié
 HDFSForm.check.fieldSeparator=Le séparateur de champs doit être spécifié
 HDFSForm.check.checkConnection=Vous devez cliquer sur le bouton Vérifier pour vérifier les paramètres de HDFS
 HDFSForm.separatorSettings=Paramètres du séparateur
+HDFSForm.rowSeparator=Séparateur de lignes
 HDFSForm.rowSeparator.tooltip=Configurer le séparateur de lignes
+HDFSForm.fieldSeparator=Séparateur de champs
 HDFSForm.fieldSeparator.tooltip=Configurer le séparateur de champs
 HDFSSchemaForm.button.retrieveSchema.tooltip=Cliquez sur ce bouton pour obtenir un schéma détaillé.
+HDFSSchemaForm.tableNavigator.tableColumn=Table
 CreateHDFSAction.createLabel=Créer HDFS
 CreateHDFSAction.editLabel=Editer HDFS
 CreateHDFSAction.openLabel=Ouvrir HDFS
