i18n: synchronize Babili strings exported on 2012-11-28-18-05-51
git-svn-id: http://talendforge.org/svn/tos/trunk@94565 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
+++ b/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
@@ -2,3 +2,4 @@ HDFSBrowseDialog.desc=Sélectionnez un(e) {0}.
 HDFSBrowseDialog.button.collapseAll=Réduire tout
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Echec de la connexion. Modifiez les paramètres de HDFS.
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Impossible de se connecter à HDFS "{0}". Vérifiez les paramètres de connexion.
+HDFSBrowseDialog.column.size=Taille
