--- a/org.talend.oozie.scheduler.nl/src/messages_fr.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_fr.properties
@@ -35,3 +35,4 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_WEEK=semaine
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MONTH=mois
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_DAY=fin du jour
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_MONTH=fin du mois
+TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=Aucune
