bug TDI-24037 fixed : Rename the "Retrieve schema" by "Guess schema" in the HDFS wizard
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@94984 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs/src/messages.properties
+++ b/org.talend.repository.hdfs/src/messages.properties
@@ -67,6 +67,8 @@ HDFSForm.fieldSeparator.tooltip=Set the field separator
 
 HDFSSchemaForm.button.retrieveSchema=Retrieve Schema
 HDFSSchemaForm.button.retrieveSchema.tooltip=Press this button to get a detailed schema..
+HDFSSchemaForm.button.guessSchema=Guess Schema
+HDFSSchemaForm.button.guessSchema.tooltip=Press this button to guess a detailed schema..
 HDFSSchemaForm.button.addSchema=Add Schema
 HDFSSchemaForm.button.removeSchema=Remove Schema
 HDFSSchemaForm.text.name=Name
