--- a/org.talend.designer.components.tishadoopprovider/components/tHDFSPut/tHDFSPut_messages_fr.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHDFSPut/tHDFSPut_messages_fr.properties
@@ -1,9 +1,1 @@
-LONG_NAME=Place des fichiers dans le système de fichiers Hadoop
-HELP=org.talend.help.tHDFSPut
-HOST.NAME=Hôte
-PORT.NAME=Port
-USERNAME.NAME=Utilisateur
-GROUP.NAME=Groupe
-OVERWRITE.NAME=Ecraser le fichier
-DIE_ON_ERROR.NAME=Terminer en cas d'erreur
-USE_EXISTING_CONNECTION.NAME=Utiliser une connexion existante
+USE_KRB.NAME=Utiliser l'authentification de Kerberos
