--- a/org.talend.designer.components.tishadoopprovider/components/tHiveInput/tHiveInput_messages_en.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHiveInput/tHiveInput_messages_en.properties
@@ -1,22 +1,8 @@
-HELP=org.talend.help.tHiveInput
-LONG_NAME=Reads a Hive table and extracts fields based on an HiveQL query
-PROPERTY.NAME=Property Type
-USE_EXISTING_CONNECTION.NAME=Use an existing connection
-CONNECTION.NAME=Component List
-HOST.NAME=Host
-PORT.NAME=Port
-DBNAME.NAME=Database
-USER.NAME=Username
-PASS.NAME=Password
-SCHEMA.NAME=Schema
-SCHEMA_DB.NAME=Schema
-TABLE.NAME=Table Name
-DBTABLE.NAME=Table Name
-QUERYSTORE.NAME=Query Type
-GUESS_SCHEMA.NAME=Guess Schema
-QUERY.NAME=Query
-ENCODING.NAME=Encoding
-TRIM_ALL_COLUMN.NAME=Trim all the String/Char columns
-TRIM_COLUMN.NAME=Trim column
-TRIM_COLUMN.ITEM.TRIM=Trim
-NB_LINE.NAME=Number of line
+SET_TEMP_PATH.NAME=Set temporary path
+TEMP_PATH_GROUP.NAME=Temporary Path
+SET_MAPRED_JT.NAME=Set Jobtracker URI
+SET_FS_DEFAULT_NAME.NAME=Set Namenode URI
+HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties
+HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
+HADOOP_PROPS.NAME=Hadoop properties
