--- a/org.talend.designer.components.tishadoopprovider/components/tPigStoreResult/tPigStoreResult_messages_en.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tPigStoreResult/tPigStoreResult_messages_en.properties
@@ -1,8 +1,1 @@
-HELP=org.talend.help.tPigConnection
-LONG_NAME=Store the result into a given file.
-OUTPUT_FILENAME.NAME=Result file
-FIELD_SEPARATOR_CHAR.NAME=Field separator
-STORE.NAME=Store function
-STORE.ITEM.PIGSTORAGE=PigStorage
-STORE.ITEM.BINSTORAGE=BinStorage
-STORE.ITEM.PIGDUMP=PigDump
+THRIFT_SERVER.NAME=HCat metastore
