i18n: synchronize Babili strings exported on 2013-02-06-15-22-04
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@97939 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog.nl/src/messages_ja.properties
+++ b/org.talend.repository.hcatalog.nl/src/messages_ja.properties
@@ -25,5 +25,7 @@ HCatalogSchemaForm.tableNavigator.tableColumn=\u30C6\u30FC\u30D6\u30EB
 HCatalogSchemaForm.check.tableNameIsEmpty=\u30B9\u30AD\u30FC\u30DE\u540D\u3092\u5B9A\u7FA9\u3057\u3066\u4E0B\u3055\u3044
 HCatalogSchemaForm.check.tableNameIsExist=\u540D\u524D"{0}"\u304C\u91CD\u8907\u3057\u3066\u3044\u307E\u3059
 HCatalogSchemaForm.check.tableNameIsInvalid=\u540D\u524D\u306B\u4E0D\u6B63\u6587\u5B57\u304C\u542B\u307E\u308C\u307E\u3059\uFF1A{0}
+CreateHCatalogAction.createLabel=HCatalog\u63A5\u7D9A\u306E\u4F5C\u6210
+CreateHCatalogAction.editLabel=HCatalog\u63A5\u7D9A\u306E\u7DE8\u96C6
 CreateHCatalogSchemaAction.createLabel=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
 CreateHCatalogSchemaAction.checkConnection=HCatalog\u63A5\u7D9A\u3092\u78BA\u8A8D\u4E2D...
