--- a/org.talend.repository.hdfs.nl/src/messages_ja.properties
+++ b/org.talend.repository.hdfs.nl/src/messages_ja.properties
@@ -5,6 +5,7 @@ HDFSWizardPage.titleUpdate.Step1=HDFS\u63A5\u7D9A\u3092\u7DE8\u96C6 - \u30B9\u30
 HDFSWizardPage.titleUpdate.Step2=HDFS\u63A5\u7D9A\u3092\u7DE8\u96C6 - \u30B9\u30C6\u30C3\u30D7 2/2
 HDFSSchemaWizardPage.descriptionCreate=\u30EA\u30DD\u30B8\u30C8\u30EA\u306B\u65B0\u898F\u30B9\u30AD\u30FC\u30DE\u3092\u8FFD\u52A0
 HDFSSchemaWizardPage.descriptionUpdate=\u30EA\u30DD\u30B8\u30C8\u30EA\u5185\u306E\u30B9\u30AD\u30FC\u30DE\u3092\u66F4\u65B0\u3057\u307E\u3059\u3002
+AbstractHDFSForm.checkConnection.failure.msg=\u63A5\u7D9A\u306B\u5931\u6557\u3057\u307E\u3057\u305F\u3002HDFS\u3078\u306E\u8A2D\u5B9A\u3092\u5909\u66F4\u3057\u3066\u4E0B\u3055\u3044\u3002
 HDFSFileSelectorForm.selectFiles=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u3092\u53D6\u5F97\u3057\u3066\u30C6\u30FC\u30D6\u30EB\u3092\u9078\u629E
 HDFSSchemaForm.button.retrieveSchema=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
 CreateHDFSSchemaAction.createLabel=\u30B9\u30AD\u30FC\u30DE\u60C5\u5831\u306E\u53D6\u5F97
