--- a/org.talend.designer.hdfsbrowse.nl/src/messages_en.properties
+++ b/org.talend.designer.hdfsbrowse.nl/src/messages_en.properties
@@ -6,3 +6,4 @@ HDFSBrowseDialog.button.collapseAll=Collapse All
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
 HDFSBrowseDialog.column.size=Size
+AbstractHDFSBrowseController.checkConnection=Checking HDFS connection...
