--- a/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
+++ b/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
@@ -1,3 +1,4 @@
+HDFSBrowseDialog.title=Parcourir HDFS
 HDFSBrowseDialog.desc=Sélectionnez un(e) {0}.
 HDFSBrowseDialog.button.collapseAll=Réduire tout
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Echec de la connexion. Modifiez les paramètres de HDFS.
