feature TDI-24445 added : Refactor hdfs and hcatalog to adapt hadoop cluster connection.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@98653 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs/src/messages.properties
+++ b/org.talend.repository.hdfs/src/messages.properties
@@ -39,23 +39,9 @@ HDFSFileSelectorForm.title.success=Success
 HDFSFileSelectorForm.tableIsExist=Another "{0}" already exist in "{1}", do you want to cover it?
 HDFSFileSelectorForm.msg.connectionFailure="HDFS connection failure. Please press "Check Connection" to restore the situation."
 
-HDFSForm.distributionSettings=Distribution Settings
-HDFSForm.distribution=Distribution
-HDFSForm.distribution.tooltip=Set the hadoop distribution
-HDFSForm.version=Version
-HDFSForm.version.tooltip=Set the distribution version
 HDFSForm.connectionSettings=Connection Settings
-HDFSForm.text.namenodeURI=Namenode URI
-HDFSForm.button.kerberos=Enable kerberos security
-HDFSForm.text.principal=Principal
 HDFSForm.text.userName=User name
-HDFSForm.text.group=Group
-HDFSForm.check.distribution=Distribution must be specified
-HDFSForm.check.version=Version must be specified
-HDFSForm.check.namenodeURI=Namenode URI must be specified
-HDFSForm.check.principal=Principal must be specified
 HDFSForm.check.userName=User name must be specified
-HDFSForm.check.group=Group must be specified
 HDFSForm.check.rowSeparator=Row Separator must be specified
 HDFSForm.check.fieldSeparator=Field Separator must be specified
 HDFSForm.check.checkConnection=You must press the Check Button to check the HDFS Setting
@@ -83,16 +69,9 @@ HDFSSchemaForm.check.tableNameIsEmpty=A Schema have a empty name. It must be spe
 HDFSSchemaForm.check.tableNameIsExist=This name is already existing "{0}"
 HDFSSchemaForm.check.tableNameIsInvalid=Name content illegal characters:{0}
 
-CreateHDFSAction.createLabel=Create HDFS
-CreateHDFSAction.editLabel=Edit HDFS
-CreateHDFSAction.openLabel=Open HDFS
-
 CreateHDFSSchemaAction.createLabel=Retrieve Schema
 CreateHDFSSchemaAction.editLabel=Edit Schema
 CreateHDFSSchemaAction.connectionFailure.mainMsg=Connection failure. You must change the HDFS Settings.
-CreateHDFSSchemaAction.connectionFailure.detailMsg=Cannot connect to HDFS "{0}". Please check the connection parameters.
+CreateHDFSSchemaAction.connectionFailure.detailMsg=Cannot connect to HDFS. Please check the connection parameters.
 CreateHDFSSchemaAction.checkConnection=Checking HDFS connection...
-
-EditHDFSPropertiesAction.editLabel=Edit properties
-EditHDFSPropertiesAction.tooltip=Edit properties
 
