feature TDI-24439 added: Add the possibility to load any version of hadoop supporting oozie
git-svn-id: http://talendforge.org/svn/tos/trunk@98827 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -19,6 +19,10 @@ TOozieUIConstants_LBL_Frequency=Frequency
 TOozieUIConstants_LBL_TimeUnit=Time Unit
 TOozieUIConstants_LBL_StartTime=Start Time
 TOozieUIConstants_LBL_EndTime=End Time
+TOozieUIConstants_LBL_version_group=Version
+TOozieUIConstants_LBL_connection_group=Connection
+TOozieUIConstants_LBL_hadoop_distribution=Hadoop distribution
+TOozieUIConstants_LBL_hadoop_version=Hadoop version
 TOozieUIConstants_LBL_NameNodeEndPoint=Name node end point
 TOozieUIConstants_LBL_JobTrackerEndPoint=Job tracker end point
 TOozieUIConstants_LBL_OozieEndPoint=Oozie end point
