feature TDI-24441 added: Add the possibility to link the view to a defined cluster in repository mode.
git-svn-id: http://talendforge.org/svn/tos/trunk@99240 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -58,9 +58,10 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_DAY=end of day
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_MONTH=end of month
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=none
 
-
-
-
+ExecuteJobComposite.fromRepository=From repository
+ExecuteJobComposite.fromPreferences=From preferences
+ExecuteJobComposite.fromRepositorytoolTip=Select a model to load oozie
+ExecuteJobComposite.Server=Server
 
 
 
