feature TDI-24445 modified: fixed some problems.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@99367 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog/src/messages.properties
+++ b/org.talend.repository.hcatalog/src/messages.properties
@@ -43,9 +43,13 @@ HCatalogForm.templetonSettings=Templeton Settings
 HCatalogForm.text.host=Host name
 HCatalogForm.text.port=Port
 HCatalogForm.text.userName=User name
+HCatalogForm.text.krbPrincipal=Principal
+HCatalogForm.text.krbRealm=Realm
 HCatalogForm.check.host=Host name must be specified
 HCatalogForm.check.port=Port must be specified
 HCatalogForm.check.userName=User name must be specified
+HCatalogForm.check.krbPrincipal=Principal must be specified
+HCatalogForm.check.krbRealm=Realm must be specified
 HCatalogForm.check.database=Database must be specified
 HCatalogForm.check.checkConnection=You must press the Check Button to check the HCatalog Settings
 HCatalogForm.databaseSettings=Database Settings
