feature TDI-24427 added: Allow to create a custom Hadoop distribution in the Studio
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@99842 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/org.talend.repository.hadoopcluster/src/messages.properties
@@ -18,6 +18,9 @@ HadoopClusterForm.distribution=Distribution
 HadoopClusterForm.distribution.tooltip=Set the hadoop distribution
 HadoopClusterForm.version=Version
 HadoopClusterForm.version.tooltip=Set the distribution version
+HadoopClusterForm.customSettings=Custom
+HadoopClusterForm.authentication=Authentication
+HadoopClusterForm.authentication.tooltip=Set the authentication mode
 HadoopClusterForm.connectionSettings=Connection
 HadoopClusterForm.text.namenodeURI=Namenode URI
 HadoopClusterForm.text.jobtrackerURI=Jobtracker URI
@@ -27,6 +30,7 @@ HadoopClusterForm.text.userName=User name
 HadoopClusterForm.text.group=Group
 HadoopClusterForm.check.distribution=Distribution must be specified
 HadoopClusterForm.check.version=Version must be specified
+HadoopClusterForm.check.authentication=Authentication must be specified
 HadoopClusterForm.check.namenodeURI=Namenode URI must be specified
 HadoopClusterForm.check.jobtrackerURI=Jobtracker URI must be specified
 HadoopClusterForm.check.principal=Principal must be specified
