--- a/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
+++ b/org.talend.designer.hdfsbrowse.nl/src/messages_fr.properties
@@ -4,3 +4,4 @@ HDFSBrowseDialog.button.collapseAll=Réduire tout
 AbstractHDFSBrowseController.connectionFailure.mainMsg=Echec de la connexion. Modifiez les paramètres de HDFS.
 AbstractHDFSBrowseController.connectionFailure.detailMsg=Impossible de se connecter à HDFS "{0}". Vérifiez les paramètres de connexion.
 HDFSBrowseDialog.column.size=Taille
+AbstractHDFSBrowseController.checkConnection=Vérification de la connexion HDFS...
