--- a/org.talend.oozie.scheduler.nl/src/messages_en.properties
+++ b/org.talend.oozie.scheduler.nl/src/messages_en.properties
@@ -47,3 +47,11 @@ TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_MONTH=month
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_DAY=end of day
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_END_OF_MONTH=end of month
 TOozieCommonConstants.OOZIE_TIMEUNIT_DISPLAY_NAME_NONE=none
+TOozieUIConstants_LBL_version_group=Version
+TOozieUIConstants_LBL_connection_group=Connection
+TOozieUIConstants_LBL_hadoop_distribution=Hadoop distribution
+TOozieUIConstants_LBL_hadoop_version=Hadoop version
+ExecuteJobComposite.fromRepository=From repository
+ExecuteJobComposite.fromPreferences=From preferences
+ExecuteJobComposite.fromRepositorytoolTip=Select a model to load oozie
+ExecuteJobComposite.Server=Server
