feature TDI-25060 added: Fix some problems for pigudf
git-svn-id: http://talendforge.org/svn/tos/trunk@100386 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.pigudf/src/main/java/messages.properties
+++ b/org.talend.repository.pigudf/src/main/java/messages.properties
@@ -8,5 +8,5 @@ NewPigudfWizardPage.pigtemplate=Template
 EditPigudfAction.text.editRoutine=Edit Pig UDF
 EditPigudfAction.toolTipText.editRoutine=Edit Pig UDF
 ReadPigudfAction.toolTipText.readRoutine=Read Pig UDF
-ReadPigudfAction.text.readRoutine=Read routine
+ReadPigudfAction.text.readRoutine=Read Pig UDF
 NewPigudfWizardPage.TemplateFormatError=Please select a template
