feature TDI-24445 : do some optimization for hadoop part like add icons, validations, improve classloader system and so.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@100578 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog/src/messages.properties
+++ b/org.talend.repository.hcatalog/src/messages.properties
@@ -46,11 +46,17 @@ HCatalogForm.text.userName=User name
 HCatalogForm.text.krbPrincipal=Principal
 HCatalogForm.text.krbRealm=Realm
 HCatalogForm.check.host=Host name must be specified
+HCatalogForm.check.host.invalid=Host name is invalid
 HCatalogForm.check.port=Port must be specified
+HCatalogForm.check.port.invalid=Port is invalid
 HCatalogForm.check.userName=User name must be specified
+HCatalogForm.check.userName.invalid=User name is invalid
 HCatalogForm.check.krbPrincipal=Principal must be specified
+HCatalogForm.check.krbPrincipal.invalid=Principal is invalid
 HCatalogForm.check.krbRealm=Realm must be specified
+HCatalogForm.check.krbRealm.invalid=Realm is invalid
 HCatalogForm.check.database=Database must be specified
+HCatalogForm.check.database.invalid=Database is invalid
 HCatalogForm.check.checkConnection=You must press the Check Button to check the HCatalog Settings
 HCatalogForm.databaseSettings=Database Settings
 HCatalogForm.text.database=Database
