feature TDI-24445 : do some optimization for hadoop part like add icons, validations, improve classloader system and so.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@100580 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hadoopcluster/src/messages.properties
+++ b/org.talend.repository.hadoopcluster/src/messages.properties
@@ -32,10 +32,15 @@ HadoopClusterForm.check.distribution=Distribution must be specified
 HadoopClusterForm.check.version=Version must be specified
 HadoopClusterForm.check.authentication=Authentication must be specified
 HadoopClusterForm.check.namenodeURI=Namenode URI must be specified
+HadoopClusterForm.check.namenodeURI.invalid=Namenode URI is invalid
 HadoopClusterForm.check.jobtrackerURI=Jobtracker URI must be specified
+HadoopClusterForm.check.jobtrackerURI.invalid=Jobtracker URI is invalid
 HadoopClusterForm.check.principal=Principal must be specified
+HadoopClusterForm.check.principal.invalid=Principal is invalid
 HadoopClusterForm.check.userName=User name must be specified
+HadoopClusterForm.check.userName.invalid=User name is invalid
 HadoopClusterForm.check.group=Group must be specified
+HadoopClusterForm.check.group.invalid=Group is invalid
 HadoopClusterForm.check.checkConnection=You must press the Check Button to check the HadoopCluster Setting
 
 EditHadoopClusterPropertiesAction.editLabel=Edit properties
