--- a/org.talend.repository.oozie/src/messages.properties
+++ b/org.talend.repository.oozie/src/messages.properties
@@ -6,8 +6,10 @@ AbstractOozieForm.endPointInvalid=Connection failure. The end point is invalid
 OozieForm.check=Check
 OozieForm.connectionSetting=Connection Settings
 OozieForm.endPoint=End Point
-OozieForm.endPointInvalid=End Point invalid
+OozieForm.endPointInvalid=End Point must be specified
+OozieForm.endPointInvalid.invalid=End Point is invalid
 OozieForm.nameInvalid=User name must be specified
+OozieForm.nameInvalid.invalid=User name is invalid
 OozieForm.oozieVersion=Oozie Version
 OozieForm.userName=User name
 OozieForm.versionSetting=Version Settings
