TDI-24418: Modify the value of the DB_VERSION key in the properties files. (The change on BABILI has been done as well).
git-svn-id: http://talendforge.org/svn/tos/trunk@100619 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages_en.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages_en.properties
@@ -31,7 +31,7 @@ ENDKEY_DOCID.NAME=Endkey docid
 GROUP.NAME=Group
 GROUP_LEVEL.NAME=Group level
 DB_VERSION.NAME=DB Version
-DB_VERSION.ITEM.COUCHBASE_2_0=COUCHBASE 2.0
+DB_VERSION.ITEM.COUCHBASE_2_0=Couchbase 2.0
 LOOP_QUERY.NAME=Loop XPath query
 MAPPING.ITEM.SCHEMA_COLUMN=Schema output column
 MAPPING.ITEM.QUERY=XPath query
