--- a/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages_fr.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages_fr.properties
@@ -6,5 +6,5 @@ INCLUDE_DOCS.NAME=Inclure les documents
 DESCENDING.NAME=Descendant
 DEBUG.NAME=DEBUG
 DB_VERSION.NAME=Version de la base de données
-DB_VERSION.ITEM.COUCHBASE_2_0=COUCHBASE 2.0
+DB_VERSION.ITEM.COUCHBASE_2_0=Couchbase 2.0
 MAPPING.ITEM.SCHEMA_COLUMN=Colonne de sortie du schéma
