bug TDI-25480 fixed:Improper title of Oozie setting dialog box
git-svn-id: http://talendforge.org/svn/tos/trunk@101121 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.oozie.scheduler/src/messages.properties
+++ b/org.talend.oozie.scheduler/src/messages.properties
@@ -29,6 +29,7 @@ TOozieUIConstants_LBL_OozieEndPoint=Oozie end point
 TOozieUIConstants_LBL_userName_for_hadoop=User Name
 TOozieUIConstants_DLG_scheduler_title=Oozie Scheduling
 TOozieUIConstants_DLG_setting_title=Global Setting
+TOozieUIConstants_DLG_setting_title1=Oozie Settings
 TOozieUIConstants_DLG_date_error_title=Date Error
 TOozieUIConstants_DLG_date_error_endLessStart=Please check the time, "End Time" should not be less than "Start Time"!
 TOozieUIConstants_DLG_date_error_startGreaterEnd=Please check the time, "Start Time" should not be greater than "End Time"!
